deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-app
  template:
    metadata:
      labels:
        app: employee-app
    spec:
      containers:
        - name: employee
          image: docker.io/ibrahim3/employee-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
