service.yaml
apiVersion: v1

kind: Service

metadata:

  name: employee-service
  namespace: devopshubofficial-dev

spec:

  selector:
    app: employee

  ports:

  - port: 80

    targetPort: 8080
