route.yaml
apiVersion: route.openshift.io/v1

kind: Route

metadata:

  name: employee-route
  namespace: devopshubofficial-dev

spec:

  to:

    kind: Service

    name: employee-service
